# fp-homework

./: README.md  stack.yaml
hw0/: README.md  hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: README.md  hw1.cabal
hw1/src/: Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs  Block6.hs  BlockBonus.hs
hw1/test/: Block1Hedgehog.hs  Block1Spec.hs  Block2Hedgehog.hs  Block2Spec.hs  Block3Spec.hs  Block4Spec.hs  Block5Spec.hs  Block6Spec.hs  HedgehogTest.hs  Spec.hs
