name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/pavponn/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Pavel Ponomarev
maintainer:          pavponn@yandex.ru
copyright:           2020 Pavel Ponomarev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1
                     , Block2
                     , Block3
                     , Block4
                     , Block5
                     , Block6
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , mtl
                     , containers
  default-language:    Haskell2010

test-suite hw1-spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw1
                     , mtl
                     , hspec
  ghc-options:         -Wall
  other-modules:       Block2Spec
                     , Block3Spec
                     , Block4Spec
                     , Block5Spec
                     , Block6Spec
  default-language:    Haskell2010

test-suite hw1-hedgehog
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HedgehogTest.hs
  build-depends:       base
                     , hw1
                     , hedgehog
  ghc-options:         -Wall
  other-modules:       Block2Hedgehog
default-language:    Haskell2010
